# agentflow

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml  requirements.txt  run_basic_tests.py  simple_agent_example.py
agentflow/: __init__.py  __main__.py
agentflow/agents/: __init__.py  base.py  openrouter_agent.py  project_manager.py
agentflow/cli/: __init__.py  main.py
agentflow/core/: __init__.py  orchestrator.py  simple_orchestrator.py  task.py  types.py
agentflow/examples/: README.md  __init__.py
agentflow/examples/basic_agent/: README.md  __init__.py  agentflow.json  main.py  requirements.txt
agentflow/examples/plugins/: __init__.py
agentflow/examples/plugins/codegen/: __init__.py  plugin.py
agentflow/examples/web_api/: __init__.py  main.py  requirements.txt
agentflow/integrations/: __init__.py  deepseek_integration.py  openai_integration.py  openrouter_integration.py  xai_integration.py
agentflow/plugins/: __init__.py  base.py  discovery.py  manager.py  registry.py
agentflow/plugins/builtin/: __init__.py  hello_world.py  openai_plugin.py  openrouter_plugin.py
agentflow/tools/: __init__.py  openrouter_dashboard.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  docker-start.sh
docs/: CHANGELOG.md  CLAUDE.md  DIRECTORY_STRUCTURE.md  IMPROVEMENT_PLAN.md  QUICK_FIX_SUMMARY.md  STRUCTURE.md
examples/: README.md
examples/advanced/: multi_agent_collaboration.py
examples/basic/: hello_agent.py  task_scheduler_demo.py
examples/chatbot/: intelligent_assistant.py
examples/data_processing/: data_analyzer.py
examples/plugins/: custom_plugin_example.py
examples/web_api/: fastapi_integration.py
tests/: README.md  __init__.py  run_tests.py
tests/demos/: demo_ai_agents.py
tests/integration/: basic_xai_test.py  simple_gemini_test.py  simple_xai_test.py  test_dashboard.py  test_gemini_api.py  test_grok_api.py  test_grok_premium_toggle.py  test_openrouter.py  test_openrouter_account_status.py  test_openrouter_agent_system.py  test_openrouter_api.py  test_openrouter_basic.py  test_paid_model.py  test_platform_setup.py  test_xai_email.py
tests/tools/: __init__.py  check_limits.py  detailed_limits_check.py  query_balance_limits.py
tests/unit/: test_orchestrator.py
